# gpapconv

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  gpapconv.py  now.json  output_format.py  pyproject.toml  queries.sql  requirements.txt  uwsgi.ini
.github/: dependabot.yml
queries/: gpap2geojson.sql  gpap2osm.sql
src/gpapconv/: __init__.py  gpapconv.py  queries.sql
web/: index.html
