[tool.poetry]
name = "gpapconv"
version = "0.1.2"
description = "Geopaparazzi to OSM XML and GeoJSON converter"
authors = ["Francesco Frassinelli <fraph24@gmail.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
hug = "^2.6.1"
uwsgi = "^2.0.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

