[tool.poetry]
name = "gpapconv"
version = "0.2.0"
description = "Geopaparazzi to OSM XML and GeoJSON converter"
authors = ["Francesco Frassinelli <fraph24@gmail.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
aiofiles = "^0.4.0"
uvicorn = "^0.11.3"
fastapi = "^0.54.0"
python-multipart = "^0.0.5"
anosql = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

