[project]
name = "gpapconv"
version = "0.2.1"
description = "Geopaparazzi to OSM XML and GeoJSON converter"
authors = [
    {name="Francesco Frassinelli", email="fraph24@gmail.com"}
]
license = {text="AGPL-3.0-or-later"}
requires-python = ">=3.9.0"
readme = "README.md"
dependencies = [
    "aiofiles",
    "uvicorn",
    "fastapi",
    "python-multipart",
    "aiosql"
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
gpapconv = ["queries.sql", "index.html"]